# python-producer-consumer

./: .dockerignore  .env.example  README.md  docker-compose.yaml  price_change_requests.http
alembic/: env.py
consumer/: Dockerfile  pyproject.toml
consumer/db/: session.py
consumer/src/: main.py
consumer/src/app/: price_change_consumer_app.py
consumer/src/core/: settings.py
consumer/src/db/: session.py
consumer/src/kafka/: price_change_consumer.py
consumer/src/message_processors/: price_change_message_processor.py
consumer/src/price_change/: message_processor.py  model.py  repository.py
consumer/test/kafka/: price_change_consumer.py
consumer/test/message_processors/: price_change_message_processor.py
load_test/: pyproject.toml
load_test/ingest/: load_test_valid_data.py
messages/: pyproject.toml
messages/price/: price_change.py
producer/: Dockerfile  main.py  pyproject.toml
producer/core/: settings.py
producer/kafka/: dependencies.py
producer/price_change/: dependencies.py  producer.py  request_model.py  response_model.py  routes.py
producer/test/price_change/: test_producer.py  test_request_model.py  util.py
