[project]
name = "consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "confluent-kafka>=2.14.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "messages",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
]

[tool.uv.sources]
messages = { path = "../messages" }
