[project]
name = "python-producer-consumer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = ["babel>=2.18.0",
    "confluent-kafka>=2.14.0",
    "currency-symbols>=2.0.4",
    "fastapi>=0.136.1",
    "iso4217parse>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.47.0",
    "messages",
]

[tool.uv.sources]
messages = { path = "../messages" }